extract css; stage-1

--- a/public/dev.html
+++ b/public/dev.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="public/main.css">
 </head>
 <body>
     aloha
-    <script src="public/bundle.js"></script>
+    <script src="public/main.js"></script>
 </body>
 </html>
